# -book-of-recipes

./: .gitignore  pyproject.toml  requirements.txt
src/config/: settings.py  urls.py
src/recipes/: admin.py  forms.py  models.py  urls.py  views.py
src/recipes/migrations/: 0001_initial.py
src/templates/: base.html  index.html  recipes.html
src/templates/inc/: categories.html  navbar.html
src/templates/registration/: login.html
