[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Ivan <ivaaaandrobyshev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pillow = "^10.1.0"
django-bootstrap5 = "^23.3"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
